--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,9 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.lealone</groupId>
-        <artifactId>lealone</artifactId>
-        <version>5.2.0</version>
+        <groupId>org.lealone.plugins</groupId>
+        <artifactId>lealone-plugins</artifactId>
+        <version>6.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>lealone-sqlline</artifactId>
