包名从 org.lealone 变成 com.lealone

--- a/src/main/resources/lealone-sqlline.conf
+++ b/src/main/resources/lealone-sqlline.conf
@@ -9,7 +9,7 @@ lealone.sqlline {
   # info_message_template: "Lealone %s%n\"%s\"",
   # quotes: [],
   drivers: [
-    org.lealone.client.jdbc.JdbcDriver
+    com.lealone.client.jdbc.JdbcDriver
   ],
   connection_url_examples: [
     "jdbc:lealone:tcp://127.0.0.1:9210/test",
