--- a/pom.xml
+++ b/pom.xml
@@ -7,26 +7,26 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.lealone.plugins</groupId>
+        <groupId>com.lealone.plugins</groupId>
         <artifactId>lealone-plugins</artifactId>
         <version>6.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>lealone-sqlline</artifactId>
     <packaging>jar</packaging>
-    <version>6.0.0</version>
+    <version>6.0.0-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
-            <groupId>org.lealone</groupId>
+            <groupId>com.lealone</groupId>
             <artifactId>lealone-main</artifactId>
-            <version>5.2.0</version>
+            <version>6.0.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.lealone</groupId>
+            <groupId>com.lealone</groupId>
             <artifactId>lealone-client</artifactId>
-            <version>5.2.0</version> 
+            <version>6.0.0-SNAPSHOT</version> 
         </dependency>
 
         <dependency>
@@ -60,7 +60,7 @@
                                 <transformer
                                     implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
-                                        <Main-Class>org.lealone.plugins.sqlline.SqlLine</Main-Class>
+                                        <Main-Class>com.lealone.plugins.sqlline.SqlLine</Main-Class>
                                          <!-- 让log4j2选择合适的jdk，避免启动时出现WARNING: sun.reflect.Reflection.getCallerClass is not supported -->
                                         <Multi-Release>true</Multi-Release>
                                         <Built-By>Lealone Database Group</Built-By>
